--- a/Personele bibliotheek applicatie/Bibliotheek Console/Personele Bibliotheek.csproj
+++ b/Personele bibliotheek applicatie/Bibliotheek Console/Personele Bibliotheek.csproj
@@ -39,6 +39,9 @@
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -77,7 +80,6 @@
     <Compile Include="Logica\Catalogus.cs" />
     <Compile Include="Logica\Admin.cs" />
     <Compile Include="Logica\Genre.cs" />
-    <Compile Include="Logica\Sort.cs" />
     <Compile Include="Logica\User.cs" />
     <Compile Include="Logica\Exceptions.cs" />
     <Compile Include="Gui\Inlogscherm.cs">
